--- a/custom.css
+++ b/custom.css
@@ -1,6 +1,6 @@
-.monaco-workbench .part.titlebar:before {
-    content: '';
-    background: url(https://i.warosu.org/data/vt/img/0448/58/1678650187304639.gif) no-repeat center center fixed;
+.titlebar-drag-region:before {
+    /* https://i.gifer.com/3q62.gif */
+    background: url(https://i.gifer.com/5GpM.gif) repeat-x center;
     content: ' ';
     display: block;
     position: absolute;
@@ -8,6 +8,25 @@
     top: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.6;
-    background-size: cover;
+    opacity: 0.5;
+    background-size: auto;
+}
+
+.monaco-workbench .part .action-item.command-center-center {
+    border-color: rgba(123, 127, 139, 0.25)!important;
+    color: #7b7f8b!important;
+    background-color: #262626!important;
+}
+
+.composite.panel .pane-body .monaco-list .monaco-list-rows::before {
+    background: url(https://i.pinimg.com/564x/09/2c/39/092c390f1927d213d010388cb28c9646.jpg) no-repeat right;
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    background-size: contain;
 }
